#cmake_minimum_required (VERSION 2.6)


ADD_SUBDIRECTORY(HTTP)

ADD_SUBDIRECTORY(HostnameUtil)
ADD_SUBDIRECTORY(GeoIP)
ADD_SUBDIRECTORY(Generics)
ADD_SUBDIRECTORY(CaseUtil)
ADD_SUBDIRECTORY(CORBA)
#ADD_SUBDIRECTORY(Apache)

#ADD_SUBDIRECTORY(Java)
ADD_SUBDIRECTORY(ReferenceCounting)
ADD_SUBDIRECTORY(Language)
ADD_SUBDIRECTORY(Logger)
ADD_SUBDIRECTORY(PlainStorage)
ADD_SUBDIRECTORY(RotateLog)
ADD_SUBDIRECTORY(PrivacyFilter)
ADD_SUBDIRECTORY(SNMPAgent)
ADD_SUBDIRECTORY(Stream)
ADD_SUBDIRECTORY(String)
ADD_SUBDIRECTORY(Sync)
ADD_SUBDIRECTORY(TestCommons)
ADD_SUBDIRECTORY(Profiler)
ADD_SUBDIRECTORY(XMLUtility)
ADD_SUBDIRECTORY(eh)
ADD_SUBDIRECTORY(xsd)
ADD_SUBDIRECTORY(MetricsHTTPProvider)
