ADD_SUBDIRECTORY(CORBA)
ADD_SUBDIRECTORY(CaseUtil)
ADD_SUBDIRECTORY(Generics)
ADD_SUBDIRECTORY(GeoIP)
ADD_SUBDIRECTORY(HTTP)
ADD_SUBDIRECTORY(HostnameUtil)
ADD_SUBDIRECTORY(Java)
ADD_SUBDIRECTORY(Language)
ADD_SUBDIRECTORY(Logger)
ADD_SUBDIRECTORY(PlainStorage)
ADD_SUBDIRECTORY(Profiler)
ADD_SUBDIRECTORY(ReferenceCounting)
ADD_SUBDIRECTORY(RotateLog)
ADD_SUBDIRECTORY(SNMPAgent)
ADD_SUBDIRECTORY(Stream)
ADD_SUBDIRECTORY(String)
ADD_SUBDIRECTORY(Sync)
ADD_SUBDIRECTORY(TestCommons)
ADD_SUBDIRECTORY(UServerUtils)
ADD_SUBDIRECTORY(XMLUtility)
ADD_SUBDIRECTORY(eh)
ADD_SUBDIRECTORY(xsd)
