#cmake_minimum_required (VERSION 2.6)

include_directories(.)
#ADD_SUBDIRECTORY(Apache)
ADD_SUBDIRECTORY(CORBA)
#ADD_SUBDIRECTORY(Data)
ADD_SUBDIRECTORY(Generics)
ADD_SUBDIRECTORY(GeoIP)
ADD_SUBDIRECTORY(HTTP)
#ADD_SUBDIRECTORY(Language)
ADD_SUBDIRECTORY(Logger)
#ADD_SUBDIRECTORY(Oracle)
ADD_SUBDIRECTORY(PlainStorage)
ADD_SUBDIRECTORY(PrivacyFilter)
ADD_SUBDIRECTORY(SNMP)
ADD_SUBDIRECTORY(Stream)
ADD_SUBDIRECTORY(String)
ADD_SUBDIRECTORY(Sync)
ADD_SUBDIRECTORY(UServer)

ADD_SUBDIRECTORY(TestCommons)

ADD_SUBDIRECTORY(UServerUtils)

















