#cmake_minimum_required (VERSION 2.6)

include_directories(.)
ADD_SUBDIRECTORY(CORBA)
ADD_SUBDIRECTORY(Generics)
ADD_SUBDIRECTORY(GeoIP)
ADD_SUBDIRECTORY(HTTP)
ADD_SUBDIRECTORY(Logger)
ADD_SUBDIRECTORY(PlainStorage)
ADD_SUBDIRECTORY(SNMP)
ADD_SUBDIRECTORY(Stream)
ADD_SUBDIRECTORY(String)
ADD_SUBDIRECTORY(Sync)
ADD_SUBDIRECTORY(TestCommons)
















