#cmake_minimum_required (VERSION 2.6)



ADD_SUBDIRECTORY(Allocator)
ADD_SUBDIRECTORY(AllocatorsTest)
ADD_SUBDIRECTORY(AppUtils)
ADD_SUBDIRECTORY(BitAlgs)
ADD_SUBDIRECTORY(BoundedMap)
ADD_SUBDIRECTORY(CRC)
ADD_SUBDIRECTORY(CompositeActiveObject)
ADD_SUBDIRECTORY(CompressedSet)
ADD_SUBDIRECTORY(CountryCodeManip)

ADD_SUBDIRECTORY(Decimal)
ADD_SUBDIRECTORY(Hash)
ADD_SUBDIRECTORY(HashTable)
ADD_SUBDIRECTORY(LastPtr)
ADD_SUBDIRECTORY(Listener)
ADD_SUBDIRECTORY(LocalInterfaces)
ADD_SUBDIRECTORY(MTTester)
ADD_SUBDIRECTORY(MemBuf)
ADD_SUBDIRECTORY(Periodic)
ADD_SUBDIRECTORY(Planner)
ADD_SUBDIRECTORY(RandTest)
ADD_SUBDIRECTORY(Reflection)
ADD_SUBDIRECTORY(Scheduler)
ADD_SUBDIRECTORY(Scheduler2)
ADD_SUBDIRECTORY(Singleton)
ADD_SUBDIRECTORY(SmartPtr)
ADD_SUBDIRECTORY(TAlloc)
ADD_SUBDIRECTORY(TaskRunner)
ADD_SUBDIRECTORY(TaskRunnerPerf)
ADD_SUBDIRECTORY(TaskRunnerQueue)
ADD_SUBDIRECTORY(TaskRunnerSlowCoach)
ADD_SUBDIRECTORY(TaskRunnerThreads)
ADD_SUBDIRECTORY(TimeManipsTest)
ADD_SUBDIRECTORY(Uuid)
