#cmake_minimum_required (VERSION 2.6)


ADD_SUBDIRECTORY(CrashCall)
ADD_SUBDIRECTORY(InfResolve)
ADD_SUBDIRECTORY(Init)
ADD_SUBDIRECTORY(Memory)
ADD_SUBDIRECTORY(ObjectPool)
ADD_SUBDIRECTORY(Overload)
ADD_SUBDIRECTORY(ProcessControl)
ADD_SUBDIRECTORY(SameProcess)
ADD_SUBDIRECTORY(Stats)
#ADD_SUBDIRECTORY(Timeout)

