
ADD_SUBDIRECTORY(DynAny)
#ADD_SUBDIRECTORY(Few_endpoints_tooling)
#ADD_SUBDIRECTORY(GIOP_over_SSL)
#ADD_SUBDIRECTORY(Keep-alive)
#ADD_SUBDIRECTORY(OBV)
#ADD_SUBDIRECTORY(POA)
#ADD_SUBDIRECTORY(SSL_Dual)
#ADD_SUBDIRECTORY(coORBs)
#ADD_SUBDIRECTORY(custom_valuetype)
#ADD_SUBDIRECTORY(narrow)
#ADD_SUBDIRECTORY(one_way)
#ADD_SUBDIRECTORY(persistent)
#ADD_SUBDIRECTORY(thread-pool)
#ADD_SUBDIRECTORY(timeout)
#ADD_SUBDIRECTORY(timeout_cont)
